CM: Fix missing whitespace (#1945)

--- a/packages/desktop/src/notebook/main.css
+++ b/packages/desktop/src/notebook/main.css
@@ -494,7 +494,7 @@ body {
 
 .CodeMirror pre {
   padding: 0;
-  white-space: nowrap;
+  white-space: pre;
   border: 0;
   border-radius: 0;
 }
